# arkana

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  arkana.sln  arkana.vcxitems
arkana/: CMakeLists.txt  ark.h  arkana.lib.props  arkana.lib.vcxproj  bits.h  camellia.h  crc32.h  sha2.h
arkana-lib/: ark.h  arkana.lib.vcxproj  bits.h  crc32.h  sha1.h  sha2.h
arkana-lib/camellia/: camellia-avx2.cpp  camellia-avx2aesni.cpp  camellia-ia32.cpp  camellia.cpp
arkana-lib/crc32/: crc32-avx2.cpp  crc32-avx2clmul.cpp  crc32-ia32.cpp  crc32.cpp
arkana-lib/sha1/: sha1-avx2.cpp  sha1.cpp
arkana-lib/sha2/: sha2-avx2.cpp  sha2.cpp
arkana-test/: CMakeLists.txt  arkana-test.props  arkana-test.vcxproj  helper.h  main.cpp  pch.cpp  pch.h  test-camellia.cpp  test-crc32.cpp  test-sha2.cpp  test-uint128.cpp  test-uint128.gen.py
arkana/ark/: ark.cpp  base64.h  bitmanip.h  cpuid.h  hexilit.h  intrinsics.h  lutgen.h  macros.h  memory.h  types.h  uint128.h  xmm.h
arkana/bits/: base64-decoder.h  bit-manip.h  bits.cpp  cpuid.h  hex-int-literals.h  macros.h  memory.h  table.h  types.h  uint128.h  xmm.h
arkana/camellia/: camellia-avx2.cpp  camellia-avx2.h  camellia-avx2aesni.cpp  camellia-avx2aesni.h  camellia-ia32.cpp  camellia-ia32.h  camellia-ref.cpp  camellia-ref.h  camellia.cpp  camellia.h  camellia.private.hpp
arkana/crc32/: crc32-avx2.cpp  crc32-avx2.h  crc32-avx2clmul.cpp  crc32-avx2clmul.h  crc32-ia32.cpp  crc32-ia32.h  crc32-ref.cpp  crc32-ref.h  crc32.cpp  crc32.h  crc32.private.hpp
arkana/sha1/: sha1-avx2.h  sha1.h
arkana/sha2/: sha2-avx2.cpp  sha2-avx2.h  sha2-ref.cpp  sha2-ref.h  sha2.cpp  sha2.h
